--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+.gradle
+/local.properties
+.DS_Store
+.externalNativeBuild
+/.idea
+/.gradle*
+gradle-app.setting
+*.zip
+*.jar
+app/release/output.json
